--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Ashish Vats</h1>
+        <h1 class="heading">Vatsal Agarwal</h1>
         <h2 class="subheading">MERN Task Javascript</h2>
         <h3 class ="sub- subheading">Click the given below links of tasks</h3>
         <ul class="list">
